# nu_plugin_to_gui

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: color_config.rs  color_utils.rs  gui.rs  gui_ansi.rs  gui_dispatch.rs  lib.rs  main.rs  nerd_glyphs.rs  plugin_command.rs  table_data.rs  value_conv.rs  window_sizing.rs
src/value_conv/: closure.rs  mod.rs  stringify.rs  table.rs
tests/: plugin.rs
