[package]
name = "nu_plugin_to_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use local nushell workspace at 0.110.1 to avoid ListenerNonblockingMode error.
# The path dependencies will pull whatever version is defined in the repo.
nu-plugin = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-protocol = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-color-config = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-utils = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-ansi-term = "0.50"
lscolors = "0.20"

# GUI libraries
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1" # optional icons and assets
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }



