[package]
name = "nu_plugin_to_gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
# Use local nushell workspace at 0.110.1 to avoid ListenerNonblockingMode error.
# The path dependencies will pull whatever version is defined in the repo.
nu-plugin = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-protocol = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-color-config = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-utils = { git = "https://github.com/nushell/nushell", branch = "main" }
nu-ansi-term = "0.50.3"
lscolors = "0.20.0"

# GUI libraries
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"                              # optional icons and assets
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["std"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.build-dependencies]
pkg-config = "0.3.32"
